Increasing nav padding to fix closeness issue on mobiles

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -76,7 +76,7 @@ header {
 /* Navigation */
 
 .page-nav {
-  padding-bottom: 5.5rem;
+  padding-bottom: 5.8rem;
   z-index: 150;
   position: relative;
   height: 5rem;
